# osu_db_pyo3

./: .gitignore  Cargo.toml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
src/: lib.rs  osu_types.rs  osudb.rs  osudb_beatmap.rs  osudb_header.rs  parser.rs
