[package]
name = "osu-db-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "osu_db_pyo3"
crate-type = ["cdylib"]

[dependencies]
nano-leb128 = "0.1.0"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
